--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>5.10.0-M1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
